# Rust_2048_game

./: Cargo.toml  README.md
benches/: game_benchmarks.rs
src/: lib.rs  main.rs
